# microkit

./: CMakeLists.txt  build_sdk.py  settings.cmake
docs/: manual.md
example/imx8/echo_server/ethernet/: Makefile  eth.c  eth.system
example/qemu_virt_aarch64/elf-testing/: Makefile  b.c  elf-tester.c  elf-testing.system  hello.c
example/zcu102/timer/: Makefile  build.sh  mq.sh  timer.c  timer.system
libmicrokit/: microkit.ld
libmicrokit/include/: microkit.h
monitor/src/: main.c
tool/microkit/: __main__.py  elf.py
tool/microkit/src/: lib.rs  main.rs  sdf.rs  sel4.rs
